yeni p elementi eklendi

--- a/webSitesiDeneme2/index.html
+++ b/webSitesiDeneme2/index.html
@@ -11,5 +11,6 @@
     <Button Text="Button">asdS</Button>
     <br>
     <p id="deneme1">Dolore laborum qui proident aliqua aute. Ipsum incididunt dolore irure ullamco sunt sunt amet irure adipisicing dolore eiusmod voluptate aute. Elit consectetur aliquip elit et laborum duis do est est. Reprehenderit magna dolore officia tempor esse nulla ut qui in officia non in.</p>
+    <p>denemendemendemem</p>
 </body>
 </html>
