--- a/webSitesiDeneme2/html/index.html
+++ b/webSitesiDeneme2/html/index.html
@@ -123,46 +123,46 @@
                 <img src="../Resimler/3-2.jpg">
             </div>
             <p class="kutu1_yazi">HİBE VE TEŞVİKLER</p>
-            <p><a class="icon-link" href="#">KOSGEB Yeni Girişimci Danışmanlığı</a></p>
-            <p><a class="icon-link" href="#">İŞKUR Teşvik Danışmanlığı</a></p>
-            <p><a class="icon-link" href="#">Yatırım Teşvik Danışmanlığı</a></p>
-            <p><a class="icon-link" href="#">GES Proje Danışmanlığı</a></p>
-            <p><a class="icon-link" href="#">KOSGEB Fuar Desteği Danışmanlığı</a></p>
-            <p><a class="icon-link" href="#">Kalkınma Ajansları Destekleme Danışmanlığı</a></p>
+            <p><a class="icon-link" href="hizmetler/tesvik/yeni.html">KOSGEB Yeni Girişimci Danışmanlığı</a></p>
+            <p><a class="icon-link" href="hizmetler/tesvik/sgk.html">SGK Teşvik Danışmanlığı</a></p>
+            <p><a class="icon-link" href="hizmetler/tesvik/yatirim.html">Yatırım Teşvik Danışmanlığı</a></p>
+            <p><a class="icon-link" href="hizmetler/tesvik/ges.html">GES Proje Danışmanlığı</a></p>
+            <p><a class="icon-link" href="hizmetler/tesvik/iskur.html">İŞKUR Teşvik Danışmanlığı</a></p>
+            <p><a class="icon-link" href="hizmetler/tesvik/kalkinma.html">Kalkınma Ajansları Destekleme Danışmanlığı</a></p>
         </div>
         <div class="kutu1 sag_margin10">
             <div class="kutu1_resim">
                 <img src="../Resimler/2-1.png">
             </div>
                 <p class="kutu1_yazi">BELGELENDİRME VE TESCİL</p>
-            <p><a class="icon-link" href="#">CE Belgelendirme</a></p>
-            <p><a class="icon-link" href="#">TSE Belgelendirme</a></p>
-            <p><a class="icon-link" href="#">Helal Belgelendirme</a></p>
-            <p><a class="icon-link" href="#">ISO Belgelendirme</a></p>
-            <p><a class="icon-link" href="#">Marka Tescili</a></p>
-            <p><a class="icon-link" href="#">Patent Tescili</a></p>
+            <p><a class="icon-link" href="hizmetler/tescil/ce.html">CE Belgelendirme</a></p>
+            <p><a class="icon-link" href="hizmetler/tescil/tse.html">TSE Belgelendirme</a></p>
+            <p><a class="icon-link" href="hizmetler/tescil/helal.html">Helal Belgelendirme</a></p>
+            <p><a class="icon-link" href="hizmetler/tescil/iso.html">ISO Belgelendirme</a></p>
+            <p><a class="icon-link" href="hizmetler/tescil/marka.html">Marka Tescili</a></p>
+            <p><a class="icon-link" href="hizmetler/tescil/patent.html">Patent Tescili</a></p>
         </div> 
         <div class="kutu1 sag_margin10">
             <div class="kutu1_resim">
                 <img src="../Resimler/1-3.jpg">
             </div>
             <p class="kutu1_yazi">KIRSAL ALANDA ÇİFTÇİLİK VE TURİZM DESTEKLERİ</p>
-            <p><a class="icon-link" href="#">Hayvancılık Destekleri</a></p>
-            <p><a class="icon-link" href="#">Tarım ve Hayvancılık Ürünlerini Pazarlama</a></p>
-            <p><a class="icon-link" href="#">Turizm Destekleri</a></p>
-            <p><a class="icon-link" href="#">Tarım ve Hayvancılık Makine Destekleri</a></p>
-            <p><a class="icon-link" href="#">Sera ve Arıcılık Destekleri</a></p>
+            <p><a class="icon-link" href="hizmetler/destekler/hayvancilik.html">Hayvancılık Destekleri</a></p>
+            <p><a class="icon-link" href="hizmetler/destekler/pazarlama.html">Tarım ve Hayvancılık Ürünlerini Pazarlama</a></p>
+            <p><a class="icon-link" href="hizmetler/destekler/turizm.html">Turizm Destekleri</a></p>
+            <p><a class="icon-link" href="hizmetler/destekler/makine.html">Tarım ve Hayvancılık Makine Destekleri</a></p>
+            <p><a class="icon-link" href="hizmetler/destekler/sera.html">Sera ve Arıcılık Destekleri</a></p>
         </div>
         <div class="kutu1">
             <div class="kutu1_resim">
                 <img src="../Resimler/4-2.jpg">
             </div>
             <p class="kutu1_yazi kutu1_yazi1">TEKNOLOJİ VE KURUMSALLAŞMA DANIŞMANLIĞI</p>
-            <p><a class="icon-link" href="#">Web Tasarım</a></p>
-            <p><a class="icon-link" href="#">Domain-Alan Adı Tescil</a></p>
-            <p><a class="icon-link" href="#">Arama Motoru Optimizasyonu (SEO)</a></p>
-            <p><a class="icon-link" href="#">Özel Ticari Yazılımlar</a></p>
-            <p><a class="icon-link" href="#">Grafik ve Logo Tasarımı</a></p>
+            <p><a class="icon-link" href="hizmetler/danismanlik/webtasarim.html">Web Tasarım</a></p>
+            <p><a class="icon-link" href="hizmetler/danismanlik/domaintescili.html">Domain-Alan Adı Tescil</a></p>
+            <p><a class="icon-link" href="hizmetler/danismanlik/seo.html">Arama Motoru Optimizasyonu (SEO)</a></p>
+            <p><a class="icon-link" href="hizmetler/danismanlik/yazilim.html">Özel Ticari Yazılımlar</a></p>
+            <p><a class="icon-link" href="hizmetler/danismanlik/tasarim.html">Grafik ve Logo Tasarımı</a></p>
         </div>
     </div>
 
