Yatırım Teşvik Belgesi sayfası eklndi. Responsive sayfalar için başlangıç yapıldı.

--- a/webSitesiDeneme2/html/index.html
+++ b/webSitesiDeneme2/html/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <title>ASLAN Teşvik Danışmanlık</title>
     <link rel="stylesheet" href="../css/deneme.css">
-    <link rel="stylesheet" href="../css/degisik_boyutlar.css">
+    <link rel="stylesheet" href="../css/farklı_boyutlar/index.css">
     <link rel="stylesheet" href="../css/sliderIleAlakali.css">
     <link rel="stylesheet" href="../css/kutular1IleAlakali.css">
     <link rel="stylesheet" href="../css/kutular2IleAlakali.css">
-    <link rel="stylesheet" href="../css/navIleAlakali.css   ">
-    <link rel="stylesheet" href="../css/footer.css   ">
+    <link rel="stylesheet" href="../css/navIleAlakali.css">
+    <link rel="stylesheet" href="../css/footer.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                                     </div>
                                     </li>
                                     <li><a href="hizmetler/tesvik/sgk.html">SGK Teşvik Danışmanlığı</a></li>
-                                    <li><a href="hizmetler/tesvik/yatirim.html">Yatırım Teşvik Danışmanlığı</a></li>
+                                    <li><a href="hizmetler/tesvik/yatirim.html">Yatırım Teşvik Belgesi Danışmanlığı</a></li>
                                     <li><a href="hizmetler/tesvik/ges.html">GES Proje Danışmanlığı</a></li>
                                     <li><a href="hizmetler/tesvik/iskur.html">İŞKUR Teşvik Danışmanlığı</a></li>
                                     <li><a href="hizmetler/tesvik/kalkinma.html">Kalkınma Ajansları Danışmanlığı</a></li>
@@ -125,7 +125,7 @@
             <p class="kutu1_yazi">HİBE VE TEŞVİKLER</p>
             <p><a class="icon-link" href="hizmetler/tesvik/yeni.html">KOSGEB Yeni Girişimci Danışmanlığı</a></p>
             <p><a class="icon-link" href="hizmetler/tesvik/sgk.html">SGK Teşvik Danışmanlığı</a></p>
-            <p><a class="icon-link" href="hizmetler/tesvik/yatirim.html">Yatırım Teşvik Danışmanlığı</a></p>
+            <p><a class="icon-link" href="hizmetler/tesvik/yatirim.html">Yatırım Teşvik Belgesi Danışmanlığı</a></p>
             <p><a class="icon-link" href="hizmetler/tesvik/ges.html">GES Proje Danışmanlığı</a></p>
             <p><a class="icon-link" href="hizmetler/tesvik/iskur.html">İŞKUR Teşvik Danışmanlığı</a></p>
             <p><a class="icon-link" href="hizmetler/tesvik/kalkinma.html">Kalkınma Ajansları Destekleme Danışmanlığı</a></p>
