KOSGEB Yeni Girişimci Danışmanlığı sayfası eklendi. Hibe ve Teşvikler sayfası eklendi. Belgelendirme ve Tescil sayfası eklendi. Kırsal Alanda Çiftçilik ve Turizm Destekleri sayfası eklendi. Teknoloji ve Kurumsallaşma Danışmanlığı sayfası eklendi.

--- a/webSitesiDeneme2/html/hizmetler/tesvik/yatirim.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/yatirim.html
@@ -125,6 +125,7 @@
             <li><a href="#sigorta">Sigorta Primi Desteği</a></li>
             <li><a href="#KDV_iadesi">KDV İadesi</a></li>
             <li><a href="#asgari">Asgari Yatırım Tutarı</a></li>
+            <li><a href="#deprem">6 Şubat 2023 Tarihli Depremlerden Sonra 6. Bölge Teşvik Kapsamına Alınan İlçeler</a></li>
 
         </ul>
     </div>
@@ -188,7 +189,7 @@
 
         <h2 id="KDV_iadesi">KDV İadesi</h2>
         <p>Sabit yatırım tutarı 500 milyon Türk Lirasının üzerindeki Stratejik Yatırımlar kapsamında gerçekleştirilen bina-inşaat harcamaları için tahsil edilen KDV’nin iade edilmesidir.</p>
-       
+       <img src="../../../Resimler/icerik_resimleri/kdiade.jpg">
         <h2 id="asgari">Asgari Yatırım Tutarı</h2>
         <ul>
             <li>
@@ -201,7 +202,10 @@
             <li>Stratejik Yatırımlar için belirlenen asgari sabit yatırım tutarı 50 milyon TL’dir.</li>
             <li>Bölgesel Teşvik Uygulamaları için ise asgari 1.5 Milyon TL başlamak üzere desteklenen her bir sektör ve her bir il için ayrı ayrı belirlenmiştir. </li>
         </ul>
-        
+        <img src="../../../Resimler/icerik_resimleri/asgari.jpg">
+
+        <h2 id="deprem">6 Şubat 2023 Tarihli Depremlerden Sonra 6. Bölge Teşvik Kapsamına Alınan İlçeler;</h2>
+        <img src="../../../Resimler/icerik_resimleri/deprem.jpg">
     </div>
 
     <div class="footer">
