--- a/webSitesiDeneme2/html/hizmetler/tesvik/yeni/gelistirme.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/yeni/gelistirme.html
@@ -111,6 +111,7 @@
             Girişimcinin genç, kadın, engelli, gazi veya birinci derecede şehit yakını olması durumunda destek üst limitine 150 bin TL daha ilave edilmektedir.  </p>
             </div>
         
+        <img src="../../../../Resimler/icerik_resimleri/Is_Gelistirme_Destegi.jpg" style="margin-left: -1%;">
             <div class="icerikyazi">
             <h2>Desteklenecek Giderler Neler?</h2>
             <p>Destek kapsamında işletmenin personel giderleri, makine-teçhizat ve kalıp giderleri, yazılım giderleri ve hizmet alımı giderlerine (eğitim, danışmanlık ve yönderlik, belgelendirme, test ve analiz, pazarlama, tasarım, sınai mülkiyet hakları giderleri) destek sağlanıyor.</p>
