--- a/webSitesiDeneme2/html/hizmetler/tesvik/yeni/kurma.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/yeni/kurma.html
@@ -122,6 +122,7 @@
     boyunca çalışanı olduğu her yıl için 1 aylık brüt asgari ücretin iş verene toplam maliyeti tutarı kadar destek
     sağlanıyor.</p>
     </div>
+    <img src="../../../../Resimler/icerik_resimleri/Is_Kurma_Destegi.jpg" style="margin-left: -1%;" alt="iskurma">
 
     <div class="icerikyazi">
     <h2>İş Kurma Desteğine Kimler Başvuru Yapıyor?</h2>
