Sayfalra resimler eklendi.

--- a/webSitesiDeneme2/html/hizmetler/tescil/marka.html
+++ b/webSitesiDeneme2/html/hizmetler/tescil/marka.html
@@ -122,11 +122,13 @@
     </div>
 
     <div class="icerik">
+        
         <p id="giris">
             Aslan Teşvik Danışmanlık olarak, işletmelerin marka tescil süreçlerini en etkili ve hızlı şekilde tamamlayabilmesi için profesyonel danışmanlık hizmetleri sunuyoruz. Marka tescili, işletmelerin
             ürün ve hizmetlerini koruma altına alarak, rekabet avantajı sağlamalarına yardımcı olan kritik bir süreçtir. Marka tescili, işletmenizin piyasada tanınmasını, ürün ve hizmetlerinizin 
             diğerlerinden ayırt edilmesini ve yasal olarak korunmasını sağlar.
         </p>
+        <center><img src="../../../Resimler/icerik_resimleri/marka_tescil.jpg"></center>
         <h2 id="tescil_onemi">Marka Tescilinin Önemi</h2>
        <ul>
             <lh>Marka tescili, işletmeler için birçok avantaj sunar:</lh>
