--- a/webSitesiDeneme2/html/hizmetler/tescil/patent.html
+++ b/webSitesiDeneme2/html/hizmetler/tescil/patent.html
@@ -132,6 +132,7 @@
             altına alınmasını sağlayarak, bu icatların izinsiz kullanımını önler. Bu süreç, hem bireysel mucitler hem de şirketler için büyük önem taşır çünkü patent tescili, buluşunuzu rakiplerinizden 
             korur ve ticarileştirilmesini sağlar.
         </p>
+        <center><img src="../../../Resimler/icerik_resimleri/patent_tescil.jpg"></center>
         <h2 id="tescil_onemi">Patent Tescilinin Önemi</h2>
         <ul>
             <lh>Patent tescili, icatlarınız ve yenilikçi fikirleriniz için birçok avantaj sunar:</lh>
