--- a/webSitesiDeneme2/html/hizmetler/tesvik/ges.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/ges.html
@@ -127,6 +127,8 @@
             danışmanlık hizmetleri sunuyoruz. Güneş enerjisi, çevre dostu ve sürdürülebilir bir enerji kaynağı olarak gün geçtikçe daha fazla önem kazanmakta ve bu alanda sunulan teşvikler, maliyetlerin 
             azaltılmasına büyük katkı sağlamaktadır.
         </p>
+        
+        <center><img src="../../../Resimler/icerik_resimleri/ges.jpg"></center>
         <h2 id="tesvik_onemi">Güneş Enerjisi Sistemleri Teşviklerinin Önemi</h2>
        <ul>
             <lh>Güneş enerjisi sistemleri teşvikleri, işletmeler ve bireyler için birçok avantaj sunar:</lh>
