--- a/webSitesiDeneme2/html/hizmetler/tesvik/iskur.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/iskur.html
@@ -136,6 +136,8 @@
             hizmetleri sunuyoruz. İŞKUR teşvikleri, işverenlerin istihdam maliyetlerini azaltmak ve işgücü piyasasında daha rekabetçi olmalarını sağlamak amacıyla sunulan önemli 
             desteklerdir. Bu teşvikler, işletmelerin sürdürülebilir büyümesine katkı sağlar. 
         </p>
+        
+        <center><img src="../../../Resimler/icerik_resimleri/iskur.jpg"></center>
         <h2 id="tesvik_turleri">İŞKUR Teşvik Türleri</h2>
         <h3 id="A">A) Kadın, Genç ve Mesleki Yeterlilik Belgesi Olanların Teşviki</h3>
         <p>31.12.2025 tarihine kadar işsiz olan kişileri istihdam eden özel sektör işverenlerin prime esas kazanç üst sınırına kadarki sosyal güvenlik primi işveren payları 
