--- a/webSitesiDeneme2/html/hizmetler/tesvik/sgk.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/sgk.html
@@ -126,6 +126,7 @@
             SGK teşvikleri, işverenlerin maliyetlerini düşürmek ve istihdamı artırmak amacıyla sunulan devlet destekleridir. Bu teşvikler, işletmelerin rekabet gücünü artırmak ve ekonomik büyümeyi 
             desteklemek için büyük bir fırsat sunar.
         </p>
+        <center><img src="../../../Resimler/icerik_resimleri/sgk.jpg"></center>
         <h2 id="tesvik_onemi">SGK Teşviklerinin Önemi</h2>
        <ol type="1">
             <lh>SGK teşvikleri, işverenler için birçok avantaj sağlar:</lh>
