--- a/webSitesiDeneme2/html/hizmetler/tesvik/yeni.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/yeni.html
@@ -124,6 +124,8 @@
     </div>
 
     <div class="icerik">
+        
+        <center><img src="../../../Resimler/icerik_resimleri/kosgeb.jpg"></center>
         <p id="giris">Yeni iş kuran girişimcilere finansal ve teknik destek sağlayarak, onların iş dünyasında başarılı olmalarını hedefleyen bir programdır. Bu destek programı, 
             girişimcilerin iş kurma aşamasında karşılaştıkları maliyetleri düşürmek ve işletmelerinin sürdürülebilirliğini sağlamak amacıyla çeşitli teşvikler sunar. 
         </p>
