--- a/webSitesiDeneme2/html/hizmetler/tesvik/ges.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/ges.html
@@ -7,7 +7,7 @@
     <title>İŞKUR Teşvik Danışmanlığı</title>
     <link rel="stylesheet" href="../../../css/deneme.css">
     <link rel="stylesheet" href="../../../css/degisik_boyutlar.css">
-    <link rel="stylesheet" href="../../../css/hizmetler/ges.css">
+    <link rel="stylesheet" href="../../../css/hizmetler/sgk.css">
     <link rel="stylesheet" href="../../../css/navIleAlakali.css">
     <link rel="stylesheet" href="../../../css/footer.css">
 
@@ -38,10 +38,10 @@
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li><a href="iskur.html">İŞKUR Teşvik Danışmanlığı</a></li>
+                                        <li><a href="sgk.html">SGK Teşvik Danışmanlığı</a></li>
                                         <li><a href="yatirim.html">Yatırım Teşvik Danışmanlığı</a></li>
                                         <li><a href="ges.html">GES Proje Danışmanlığı</a></li>
-                                        <li><a href="fuar.html">KOSGEB Fuar Desteği Danışmanlığı</a></li>
+                                        <li><a href="iskur.html">İŞKUR Teşvik Danışmanlığı</a></li>
                                         <li><a href="kalkinma.html">Kalkınma Ajansları Danışmanlığı</a></li>
                                     </ul>
                                 </div>
@@ -122,13 +122,13 @@
     </div>
 
     <div class="icerik">
+        <center><img src="../../../Resimler/icerik_resimleri/ges.jpg" width="1200" height="500"></center>
         <p id="giris">
             Aslan Teşvik Danışmanlık olarak, işletmelerin ve bireylerin güneş enerjisi sistemleri kurulumunda devlet tarafından sağlanan teşviklerden en iyi şekilde yararlanabilmesi için profesyonel 
             danışmanlık hizmetleri sunuyoruz. Güneş enerjisi, çevre dostu ve sürdürülebilir bir enerji kaynağı olarak gün geçtikçe daha fazla önem kazanmakta ve bu alanda sunulan teşvikler, maliyetlerin 
             azaltılmasına büyük katkı sağlamaktadır.
         </p>
         
-        <center><img src="../../../Resimler/icerik_resimleri/ges.jpg"></center>
         <h2 id="tesvik_onemi">Güneş Enerjisi Sistemleri Teşviklerinin Önemi</h2>
        <ul>
             <lh>Güneş enerjisi sistemleri teşvikleri, işletmeler ve bireyler için birçok avantaj sunar:</lh>
