--- a/webSitesiDeneme2/html/hizmetler/tesvik/iskur.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/iskur.html
@@ -7,7 +7,7 @@
     <title>İŞKUR Teşvik Danışmanlığı</title>
     <link rel="stylesheet" href="../../../css/deneme.css">
     <link rel="stylesheet" href="../../../css/degisik_boyutlar.css">
-    <link rel="stylesheet" href="../../../css/hizmetler/iskur.css">
+    <link rel="stylesheet" href="../../../css/hizmetler/sgk.css">
     <link rel="stylesheet" href="../../../css/navIleAlakali.css">
     <link rel="stylesheet" href="../../../css/footer.css">
 
@@ -38,10 +38,10 @@
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li><a href="iskur.html">İŞKUR Teşvik Danışmanlığı</a></li>
+                                        <li><a href="sgk.html">SGK Teşvik Danışmanlığı</a></li>
                                         <li><a href="yatirim.html">Yatırım Teşvik Danışmanlığı</a></li>
                                         <li><a href="ges.html">GES Proje Danışmanlığı</a></li>
-                                        <li><a href="fuar.html">KOSGEB Fuar Desteği Danışmanlığı</a></li>
+                                        <li><a href="iskur.html">İŞKUR Teşvik Danışmanlığı</a></li>
                                         <li><a href="kalkinma.html">Kalkınma Ajansları Danışmanlığı</a></li>
                                     </ul>
                                 </div>
@@ -130,15 +130,16 @@
         </ul>
     </div>
 
-    <div class="icerik">
+    <div class="icerik"> 
+        <center><img src="../../../Resimler/icerik_resimleri/iskur.jpg"></center>
+        
         <p id="giris">
             Aslan Teşvik Danışmanlık olarak, işletmelerin Türkiye İş Kurumu (İŞKUR) tarafından sunulan teşviklerden maksimum düzeyde faydalanabilmesi için profesyonel danışmanlık
             hizmetleri sunuyoruz. İŞKUR teşvikleri, işverenlerin istihdam maliyetlerini azaltmak ve işgücü piyasasında daha rekabetçi olmalarını sağlamak amacıyla sunulan önemli 
             desteklerdir. Bu teşvikler, işletmelerin sürdürülebilir büyümesine katkı sağlar. 
         </p>
         
-        <center><img src="../../../Resimler/icerik_resimleri/iskur.jpg"></center>
-        <h2 id="tesvik_turleri">İŞKUR Teşvik Türleri</h2>
+       <h2 id="tesvik_turleri">İŞKUR Teşvik Türleri</h2>
         <h3 id="A">A) Kadın, Genç ve Mesleki Yeterlilik Belgesi Olanların Teşviki</h3>
         <p>31.12.2025 tarihine kadar işsiz olan kişileri istihdam eden özel sektör işverenlerin prime esas kazanç üst sınırına kadarki sosyal güvenlik primi işveren payları 
            (4.100,51 ila 30.753,84 TL) İşsizlik Sigortası Fonundan karşılanmaktadır.
