--- a/webSitesiDeneme2/html/hizmetler/tesvik/kalkinma.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/kalkinma.html
@@ -119,6 +119,7 @@
     </div>
 
     <div class="icerik">
+        <center><img src="../../../Resimler/icerik_resimleri/Kalkınma_Ajanslari.png" width="1200" height="500"></center>
         <h2 id="ajanslar">Türkiye’de Kalkınma Ajansları</h2>
         <p>
             Türkiye'de kalkınma ajansları, 2006 yılında çıkarılan 5449 sayılı Kanun ile kurulmuş ve bölgesel kalkınmayı desteklemek amacıyla faaliyet göstermeye başlamıştır. Her bir kalkınma ajansı, belirli 
@@ -127,7 +128,6 @@
         </p>
 
         
-        <img src="../../../Resimler/icerik_resimleri/Kalkınma_Ajanslari.jpg" style="margin-left: 20%;">
         <h2 id="ajans_rolu">Kalkınma Ajanslarının Rolü</h2>
         <p>Kalkınma ajansları, bölgesel kalkınma ve ekonomik büyüme hedeflerine ulaşmak için çeşitli stratejiler ve programlar uygular. </p>
        <ul>
