--- a/webSitesiDeneme2/html/hizmetler/tesvik/sgk.html
+++ b/webSitesiDeneme2/html/hizmetler/tesvik/sgk.html
@@ -121,12 +121,12 @@
     </div>
 
     <div class="icerik">
+        <center><img src="../../../Resimler/icerik_resimleri/sgk.jpg" width="1200" height="500"></center>
         <p id="giris">
             Aslan Teşvik Danışmanlık olarak, işletmelerin Sosyal Güvenlik Kurumu (SGK) tarafından sunulan teşviklerden maksimum düzeyde faydalanabilmesi için profesyonel danışmanlık hizmetleri sunuyoruz. 
             SGK teşvikleri, işverenlerin maliyetlerini düşürmek ve istihdamı artırmak amacıyla sunulan devlet destekleridir. Bu teşvikler, işletmelerin rekabet gücünü artırmak ve ekonomik büyümeyi 
             desteklemek için büyük bir fırsat sunar.
         </p>
-        <center><img src="../../../Resimler/icerik_resimleri/sgk.jpg"></center>
         <h2 id="tesvik_onemi">SGK Teşviklerinin Önemi</h2>
        <ol type="1">
             <lh>SGK teşvikleri, işverenler için birçok avantaj sağlar:</lh>
