--- a/webSitesiDeneme2/html/hizmetler/tescil/ce.html
+++ b/webSitesiDeneme2/html/hizmetler/tescil/ce.html
@@ -52,17 +52,7 @@
                                         <li><a href="../tescil/ce.html">CE Belgelendirme</a></li>
                                         <li><a href="../tescil/tse.html">TSE Belgelendirme</a></li>
                                         <li><a href="../tescil/helal.html">Helal Belgelendirme</a></li>
-                                        <li><a href="../tescil/iso.html">ISO Belgelendirme</a>
-                                            <div class="iso_altbar">
-                                                <ul>
-                                                    <li><a href="../tescil/iso/i_10002.html">ISO 10002</a></li>
-                                                    <li><a href="../tescil/iso/i_45001.html">ISO 45001</a></li>
-                                                    <li><a href="../tescil/iso/i_27001.html">ISO 27001</a></li>
-                                                    <li><a href="../tescil/iso/i_14001.html">ISO 14001</a></li>
-                                                    <li><a href="../tescil/iso/i_9001.html">ISO 9001</a></li>
-                                                </ul>
-                                            </div>
-                                        </li>
+                                        <li><a href="../tescil/iso.html">ISO Belgelendirme</a></li>
                                         <li><a href="../tescil/marka.html">Marka Tescili</a></li>
                                         <li><a href="../tescil/patent.html">Patent Tescili</a></li>
                                     </ul>
