TSE Belgelendirme sayfası oluşturuldu.

--- a/webSitesiDeneme2/html/hizmetler/tescil/helal.html
+++ b/webSitesiDeneme2/html/hizmetler/tescil/helal.html
@@ -106,7 +106,7 @@
                         <h3>İÇİNDEKİLER</h3>
                     </u></b></lh>
             <li><a href="#giris">Giriş</a></li>
-            <li><a href="#ce_belgesi">Helal Belgesi Nedir?</a></li>
+            <li><a href="#helal_belgesi">Helal Belgesi Nedir?</a></li>
             <li><a href="#urun">Helal Belgesi Hangi Ürünler İçin Gereklidir?</a></li>
             <li><a href="#belgelendirme">Helal Belgelendirme Süreci</a></li>
             <li><a href="#danismanlik">Danışmanlık Hizmetlerimiz</a></li>
